--- a/discrete_anomaly_detection.ipynb
+++ b/discrete_anomaly_detection.ipynb
@@ -751,18 +751,18 @@
     }
    ],
    "source": [
-    "plt.figure(figsize=(13,7))\n",
+    "plt.figure(figsize=(19,7))\n",
     "df.resample('M').byte_size.plot(label='Monthly')\n",
     "plt.title('Monthly resample')\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(figsize=(13,7))\n",
+    "plt.figure(figsize=(19,7))\n",
     "df.resample('W').byte_size.plot(alpha=.8, label='Weekly')\n",
     "plt.title('Weekly resample')\n",
     "plt.show()\n",
     "\n",
-    "plt.figure(figsize= (13,7))\n",
-    "df.resample('D').byte_size.plot(alpha=.4, label='Daily')\n",
+    "plt.figure(figsize= (19,7))\n",
+    "df.resample('D').byte_size.plot(label='Daily')\n",
     "#df.resample('H').byte_size.plot(alpha=.6, label='Hourly')\n",
     "df.resample('M').byte_size.plot(alpha=.2, label='Minute')\n",
     "plt.title('Byte size resamples(day, hour, minute)')\n",
@@ -1283,6 +1283,43 @@
     "#Zero bytes\n",
     "df[df.byte_size == 0]"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "<class 'pandas.core.frame.DataFrame'>\n",
+      "DatetimeIndex: 13974 entries, 2019-04-16 19:34:42 to 2019-04-17 12:55:14\n",
+      "Data columns (total 7 columns):\n",
+      " #   Column          Non-Null Count  Dtype \n",
+      "---  ------          --------------  ----- \n",
+      " 0   ip              13974 non-null  object\n",
+      " 1   request_method  13974 non-null  object\n",
+      " 2   endpoint        13974 non-null  object\n",
+      " 3   http_version    13974 non-null  object\n",
+      " 4   status_code     13974 non-null  object\n",
+      " 5   byte_size       13974 non-null  int64 \n",
+      " 6   user_agent      13974 non-null  object\n",
+      "dtypes: int64(1), object(6)\n",
+      "memory usage: 1.4+ MB\n"
+     ]
+    }
+   ],
+   "source": [
+    "df.info()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
