--- a/time_series_anomaly_detection.ipynb
+++ b/time_series_anomaly_detection.ipynb
@@ -508,7 +508,7 @@
     "def find_anomalies(w_df, user, span, weight):\n",
     "    pages = page_prep(df, user)\n",
     "    w_df = compute_pct_b(pages, span, weight, user)\n",
-    "    plt_bands(w_df, user)\n",
+    "    #plt_bands(w_df, user)\n",
     "    return w_df[w_df.pct_b>1]\n",
     "\n"
    ]
@@ -568,6 +568,13 @@
     "    user_df = find_anomalies(df, u, span, weight)\n",
     "    anomalies = pd.concat([anomalies, user_df], axis=0)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
